Global Controller files from now on.
- changed loader::file('folder/file') as loader::file('folder/file'.EXT) .
- added current_dir(), current_class(), current_method() functions to Url helper.
- loading model from another path bug fixed. added 'models' string and DS.
- added $config['subhelper_prefix'] = 'my_';  to config.php file. 
- added sess_get_flash( $prefix = '', $suffix = '') func. parameters to session drivers. 

//-----------------------------------------------------------------------------

@todo .. for the framework portability we should use fetchAll instead fetch() function.

/* Fetch all of the values of the first column */
$result = $sth->fetchAll(PDO::FETCH_COLUMN, 0);
var_dump($result);
http://php.net/manual/en/pdostatement.fetchall.php

so user no need to use unbuffered queries http://php.net/manual/en/ref.pdo-mysql.php

@todo .. rename text helper word helper , functions name must be have word_ prefix
@todo .. base helpers extend support
@todo .. config source url changes image internal alt tag
@todo .. add id attributes to form_hidden(); function..
@todo .. output cache filemtime
@todo .. remove _SESSION global from input helper
@todo .. Pdo has mysql_free_result solution ?
@todo .. add chapter topics to user_guide. general topics - advanced topics - php5 libraries - php libraries
@todo .. upload class security
@todo .. add config load and lang load track support for profiler class
@todo .. xss_clean(, 'callback_user_function'); , i_post('', 'callback_xss_user_function');

@todo .. add to user guide under the security heading
         
         first check it .. http://obullo.com/user_guide/form-validate-class.html (prep_form)
         
         xss cleans .. for native  % characters try it ..!!
         $input = htmlspceialchars(i_post());
         $input = xss_clean($input);
         $input = htmlspecialchars_decode($input);
         
@next version todo .. firewall class (integer, string validate for requests, login attempts for captcha) 